--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,15 +8,20 @@ a{
     text-decoration: none;
     color: #0043AD;
 }
-/*----------zigZag-----------*/
-#headerZigZag{
+header{
     font-family:'Courier New', Courier, monospace;
     display: flex;
+    align-items: center;
     justify-content: center;
     padding-top: 17px;
     padding-bottom: 17px;
     
     
+}
+
+.logoInstaSenai{
+    width: 30px;
+    padding-left: 50px;
 }
 
 .hrMenu::after {
@@ -27,6 +34,69 @@ a{
     margin-bottom: 360px;
     background-color: black;
 }
+
+/*----------HOME-------------*/
+#homeBody{
+    background-image: url(../img/background-maquina\ 1.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba( 0, 0, 0, 0.6);
+    background-blend-mode: multiply;
+}
+#sectionHomeBody{
+    display: flex;
+}
+#aImgInsta{
+    margin-right: 1340px;
+}
+.imgIcon{
+    width: 40px;
+}
+#divMaeDivsIcons{
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+}
+.divIconMenu{
+    display: flex;
+    align-items: center;
+    padding-top: 30%;
+}
+.divImgIcon{
+    border: 2px solid #0043AD;
+    border-radius: 50%;
+    background-color: white;
+    padding: 8px;
+}
+.divP{
+    border: 2px solid #0043AD;   
+    border-radius: 20px;
+    padding-right: 25px;
+
+    background-color: white;
+
+}
+p{
+    padding-left: 20%;
+
+    color: black;
+
+    font-family: 'Poppins', sans-serif;
+    
+}
+#divHomeImg{
+    margin-left: 40%;
+
+}
+.imgHome{
+    width: 160px;
+
+    padding: 20px;
+
+    border-radius: 40px;
+}
+
+/*----------zigZag-----------*/
 
 #sectionZigZag{
     display: flex;
