--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,18 @@ header{
 }
 #divMaeDivsIcons{
     display: flex;
+    
+    padding-left: 5%;
+}
+.divMenuClass{
+    display: flex;
     flex-direction: column;
-    padding: 5%;
 }
 .divIconMenu{
     display: flex;
     align-items: center;
-    padding-top: 30%;
+    padding-top: 20%;
+    padding-left: 20px;
 }
 .divImgIcon{
     border: 2px solid #0043AD;
@@ -85,7 +90,7 @@ p{
     
 }
 #divHomeImg{
-    margin-left: 40%;
+    margin-left: 20%;
 
 }
 .imgHome{
